@@ -311,6 +311,31 @@ public class GenotypePhenotypeService {
 		return statisticalResult;
 	}
 
+	/**
+	 * Returns a PhenotypeFacetResult object given a phenotyping center and a pipeline stable id
+	 * @param phenotypingCenter a short name for a phenotyping center
+	 * @param pipelineStableId a stable pipeline id
+	 * @return a PhenotypeFacetResult instance containing a list of PhenotypeCallSummary objects.
+	 * @throws IOException
+	 * @throws URISyntaxException
+	 */
+	public PhenotypeFacetResult getPhenotypeFacetResultByPhenotypingCenterAndPipeline(String phenotypingCenter, String pipelineStableId) throws IOException, URISyntaxException {
+		
+		String solrUrl = solr.getBaseURL();// "http://wwwdev.ebi.ac.uk/mi/solr/genotype-phenotype";
+		System.out.println("SOLR URL = " + solrUrl);
+		
+		solrUrl += "/select/?q=" + GenotypePhenotypeField.PHENOTYPING_CENTER + ":\""
+				+ phenotypingCenter+"\""+"&fq=" + GenotypePhenotypeField.PIPELINE_STABLE_ID + ":"+pipelineStableId
+				+ "&facet=true"
+				+ "&facet.field="+ GenotypePhenotypeField.RESOURCE_FULLNAME 
+				+ "&facet.field=" + GenotypePhenotypeField.PROCEDURE_NAME
+				+ "&facet.field=" + GenotypePhenotypeField.MARKER_SYMBOL
+				+ "&facet.field=" + GenotypePhenotypeField.MP_TERM_NAME 
+				+ "&sort=p_value%20asc"
+				+ "&rows=10000000&version=2.2&start=0&indent=on&wt=json";
+		System.out.println("SOLR URL = " + solrUrl);
+		return this.createPhenotypeResultFromSolrResponse(solrUrl);
+	}
 	
 	public PhenotypeFacetResult getMPByGeneAccessionAndFilter(
 			String accId, String queryString) throws IOException,
@@ -363,45 +388,44 @@ System.out.println("solr url for sorting pvalues="+solrUrl);
 
 	}
 	
-
 	private List<? extends StatisticalResult> createStatsResultFromSolr(String url, ObservationType observationType) throws IOException, URISyntaxException {
 		//need some way of determining what type of data and therefor what type of stats result object to create default to unidimensional for now
 		List<StatisticalResult> results=new ArrayList<>();
-//		StatisticalResult statisticalResult=new StatisticalResult();
-		
+		//		StatisticalResult statisticalResult=new StatisticalResult();
+
 		JSONObject resultsj = null;
 		resultsj = JSONRestUtil.getResults(url);
 		JSONArray docs = resultsj.getJSONObject("response").getJSONArray("docs");
-		
-		if(observationType==ObservationType.unidimensional) {
-		for (Object doc : docs) {
-			UnidimensionalResult unidimensionalResult=new UnidimensionalResult();
-			JSONObject phen = (JSONObject) doc;
-			String pValue = phen.getString( GenotypePhenotypeField.P_VALUE );
-			String sex = phen.getString( GenotypePhenotypeField.SEX );
-			String zygosity=phen.getString( GenotypePhenotypeField.ZYGOSITY );
-			String effectSize=phen.getString(GenotypePhenotypeField.EFFECT_SIZE);
-			String phenoCallSummaryId=phen.getString(GenotypePhenotypeField.PCS_ID);
-			
-			
-			//System.out.println("pValue="+pValue);
-			if(pValue!=null) {
-				unidimensionalResult.setId(Integer.parseInt(phenoCallSummaryId));//one id for each document and for each sex
-				unidimensionalResult.setpValue(Double.valueOf(pValue));
-				unidimensionalResult.setZygosityType(ZygosityType.valueOf(zygosity));
-				unidimensionalResult.setEffectSize(new Double(effectSize));
-				unidimensionalResult.setSexType(SexType.valueOf(sex));
-			}
-			results.add(unidimensionalResult);
-		}
-		return results;
-	}
 
-		
-		if(observationType==ObservationType.categorical) {
-			
+		if(observationType==ObservationType.unidimensional) {
 			for (Object doc : docs) {
-                            CategoricalResult catResult=new CategoricalResult();
+				UnidimensionalResult unidimensionalResult=new UnidimensionalResult();
+				JSONObject phen = (JSONObject) doc;
+				String pValue = phen.getString( GenotypePhenotypeField.P_VALUE );
+				String sex = phen.getString( GenotypePhenotypeField.SEX );
+				String zygosity=phen.getString( GenotypePhenotypeField.ZYGOSITY );
+				String effectSize=phen.getString(GenotypePhenotypeField.EFFECT_SIZE);
+				String phenoCallSummaryId=phen.getString(GenotypePhenotypeField.PCS_ID);
+
+
+				//System.out.println("pValue="+pValue);
+				if(pValue!=null) {
+					unidimensionalResult.setId(Integer.parseInt(phenoCallSummaryId));//one id for each document and for each sex
+					unidimensionalResult.setpValue(Double.valueOf(pValue));
+					unidimensionalResult.setZygosityType(ZygosityType.valueOf(zygosity));
+					unidimensionalResult.setEffectSize(new Double(effectSize));
+					unidimensionalResult.setSexType(SexType.valueOf(sex));
+				}
+				results.add(unidimensionalResult);
+			}
+			return results;
+		}
+
+
+		if(observationType==ObservationType.categorical) {
+
+			for (Object doc : docs) {
+				CategoricalResult catResult=new CategoricalResult();
 				JSONObject phen = (JSONObject) doc;
 				//System.out.println("pValue="+pValue);
 				String pValue = phen.getString( GenotypePhenotypeField.P_VALUE );
@@ -409,22 +433,22 @@ System.out.println("solr url for sorting pvalues="+solrUrl);
 				String zygosity=phen.getString( GenotypePhenotypeField.ZYGOSITY );
 				String effectSize=phen.getString(GenotypePhenotypeField.EFFECT_SIZE);
 				String phenoCallSummaryId=phen.getString(GenotypePhenotypeField.PCS_ID);
-				
+
 				//System.out.println("pValue="+pValue);
 				//if(pValue!=null) {
-                                    catResult.setId(Integer.parseInt(phenoCallSummaryId));//one id for each document and for each sex
-					catResult.setpValue(Double.valueOf(pValue));
-					catResult.setZygosityType(ZygosityType.valueOf(zygosity));
-					catResult.setEffectSize(new Double(Double.valueOf(effectSize)));
-					catResult.setSexType(SexType.valueOf(sex)); 
-                                       // System.out.println("adding sex="+SexType.valueOf(sex));
+				catResult.setId(Integer.parseInt(phenoCallSummaryId));//one id for each document and for each sex
+				catResult.setpValue(Double.valueOf(pValue));
+				catResult.setZygosityType(ZygosityType.valueOf(zygosity));
+				catResult.setEffectSize(new Double(Double.valueOf(effectSize)));
+				catResult.setSexType(SexType.valueOf(sex)); 
+				// System.out.println("adding sex="+SexType.valueOf(sex));
 				//}
 				results.add(catResult);
 			}
 			return results;
 		}
 		return results;
-		}
+	}
 
 		
 	private PhenotypeFacetResult createPhenotypeResultFromSolrResponse(
@@ -444,11 +468,29 @@ System.out.println("solr url for sorting pvalues="+solrUrl);
 			OntologyTerm phenotypeTerm = new OntologyTerm();
 			phenotypeTerm.setName(mpTerm);
 			phenotypeTerm.setDescription(mpTerm);
+
 			DatasourceEntityId mpEntity = new DatasourceEntityId();
 			mpEntity.setAccession(mpId);
 			phenotypeTerm.setId(mpEntity);
 			sum.setPhenotypeTerm(phenotypeTerm);
-			sum.setPhenotypeingCenter(phen.getString( GenotypePhenotypeField.PHENOTYPING_CENTER ));
+
+			// check the top level categories
+			JSONArray topLevelMpTermNames = phen.getJSONArray(GenotypePhenotypeField.TOP_LEVEL_MP_TERM_NAME);
+			JSONArray topLevelMpTermIDs = phen.getJSONArray(GenotypePhenotypeField.TOP_LEVEL_MP_TERM_ID);
+			List<OntologyTerm> topLevelPhenotypeTerms = new ArrayList<OntologyTerm>();
+			
+			for (int i=0; i<topLevelMpTermNames.size(); i++) {
+				OntologyTerm toplevelTerm = new OntologyTerm();
+				toplevelTerm.setName(topLevelMpTermNames.getString(i));
+				toplevelTerm.setDescription(topLevelMpTermNames.getString(i));
+				DatasourceEntityId tlmpEntity = new DatasourceEntityId();
+				tlmpEntity.setAccession(topLevelMpTermIDs.getString(i));
+				toplevelTerm.setId(tlmpEntity);
+				topLevelPhenotypeTerms.add(toplevelTerm);
+			}			
+			sum.setTopLevelPhenotypeTerms(topLevelPhenotypeTerms);
+			
+			sum.setPhenotypingCenter(phen.getString( GenotypePhenotypeField.PHENOTYPING_CENTER ));
 			if (phen.containsKey( GenotypePhenotypeField.ALLELE_SYMBOL )) {
 				Allele allele = new Allele();
 				allele.setSymbol(phen.getString(GenotypePhenotypeField.ALLELE_SYMBOL ));
@@ -471,7 +513,7 @@ System.out.println("solr url for sorting pvalues="+solrUrl);
 				sum.setGene(gf);
 			}
 			if (phen.containsKey(GenotypePhenotypeField.PHENOTYPING_CENTER )){
-				sum.setPhenotypeingCenter(phen.getString( GenotypePhenotypeField.PHENOTYPING_CENTER ));
+				sum.setPhenotypingCenter(phen.getString( GenotypePhenotypeField.PHENOTYPING_CENTER ));
 			}
 			// GenomicFeature gene=new GenomicFeature();
 			// gene.
@@ -573,14 +615,15 @@ System.out.println("solr url for sorting pvalues="+solrUrl);
 
         public GeneRowForHeatMap getResultsForGeneHeatMap(String accession, List<String> paramSetForProject){
             GeneRowForHeatMap row=new GeneRowForHeatMap(accession);
+            List<HeatMapCell> results=new ArrayList<HeatMapCell>();
 //search by gene and a list of params            
-//http://wwwdev.ebi.ac.uk/mi/impc/dev/solr/genotype-phenotype/select/?q=marker_accession_id:%22MGI:104874%22&fq=parameter_stable_id:(ESLIM_005_001_701%20OR%20ESLIM_021_001_003)&rows=10000000&version=2.2&start=0&indent=on&wt=json
-        //or search on gene and then loop through params to add the results if available order by ascending p value means we can just pick off the first entry for that param
+      //or search on gene and then loop through params to add the results if available order by ascending p value means we can just pick off the first entry for that param
             //http://wwwdev.ebi.ac.uk/mi/impc/dev/solr/genotype-phenotype/select/?q=marker_accession_id:%22MGI:104874%22&rows=10000000&version=2.2&start=0&indent=on&wt=json
             
-            Map<String,String> paramMap=new HashMap<>();//map to contain parameters with their associated status or pvalue as a string
+            Map<String,HeatMapCell> paramMap=new HashMap<>();//map to contain parameters with their associated status or pvalue as a string
             for(String paramId: paramSetForProject){
-                paramMap.put(paramId, "");
+                System.out.println("adding param to paramMap="+paramId);
+                paramMap.put(paramId,null);
             }
             
            SolrQuery q = new SolrQuery()
@@ -589,20 +632,27 @@ System.out.println("solr url for sorting pvalues="+solrUrl);
 		QueryResponse response=null;
             try {
                 response = solr.query(q);
+                results = response.getBeans(HeatMapCell.class);
+            for(HeatMapCell cell:results){
+                //System.out.println(doc.getFieldValues("p_value"));
+               
+                String paramStableId=cell.getParameterStableId();
+                System.out.println("comparing|"+paramStableId+"| with |"+cell.getParameterStableId()+"|");
+                //if(paramMap.containsKey(cell.getParameterStableId())){
+                System.out.println("cell mp Term name="+cell.getMpTermName());
+                System.out.println("cell p value="+cell.getpValue());
+                   System.out.println(cell.getpValue()+"found");
+                   //if(paramMap.get(paramStableId)==null){//not set already so set the value - first value as ordered by pValue is the one to get - ignore all others
+                       paramMap.put(paramStableId, cell);
+                   //}
+                //}
+            }
+            row.setParamToCellMap(paramMap);
             } catch (SolrServerException ex) {
                 Logger.getLogger(GenotypePhenotypeService.class.getName()).log(Level.SEVERE, null, ex);
             }
-            SolrDocumentList results = response.getResults();
-            for(SolrDocument doc:results){
-                //System.out.println(doc.getFieldValues("p_value"));
-                if(paramMap.containsKey(doc.getFieldValue(GenotypePhenotypeField.PARAMETER_STABLE_ID))){
-                    HeatMapCell cell=new HeatMapCell();
-                    String pvalue=(String)doc.getFieldValue("p_value");
-                    System.out.println(pvalue);
-                    cell.setpValue(new Float((String)doc.getFieldValue(pvalue)));
-                    cell.setMpTermName((String)doc.getFieldValue("mp_term_name"));   
-                }
-            }
+            
+            
             return row;
         }
 
